Unify on Map.of