@@ -1,7 +1,6 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.search.query.textserialize.item;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -19,7 +18,7 @@ public class ItemArguments {
             properties = (Map<?, ?>) ListUtil.first(arguments);
             children = ListUtil.rest(arguments);
         } else {
-            properties = Collections.emptyMap();
+            properties = Map.of();
             children = arguments;
         }
     }
