@@ -913,7 +913,7 @@ public class YqlParser implements Parser {
             GroupingOperation groupingOperation = GroupingOperation.fromString(groupingAst.getArgument(0));
             VespaGroupingStep groupingStep = new VespaGroupingStep(groupingOperation);
             List<Object> continuations = getAnnotation(groupingAst, "continuations", List.class,
-                                                       Collections.emptyList(), "grouping continuations");
+                                                       List.of(), "grouping continuations");
 
             for (Object continuation : continuations) {
                 groupingStep.continuations().add(Continuation.fromString(dereference(continuation)));
@@ -1614,7 +1614,7 @@ public class YqlParser implements Parser {
         {
             Item leaf = (Item) out;
             Map<?, ?> itemAnnotations = getAnnotation(ast, ANNOTATIONS,
-                                                      Map.class, Collections.emptyMap(), "item annotation map");
+                                                      Map.class, Map.of(), "item annotation map");
             for (Map.Entry<?, ?> entry : itemAnnotations.entrySet()) {
                 Preconditions.checkArgument(entry.getKey() instanceof String,
                                             "Expected String annotation key, got %s.", entry.getKey().getClass());
